=================================
Changes for Crate Admin Interface
=================================

Unreleased
==========

Breaking Changes
----------------

Changes
-------

 - Added pagination to Console results.
 
Fixes
-----

 - Fix formating of strings in the console view.

2017/10/10 1.6.3
================

Fixes
----- 

 - Update position of the navigation menu elements.

 - Fixed left Join condition in shards query that previously caused 
   duplicated shards to be displayed.

 - Added loading indicator in shards view.

 - Do not automatically execute the query when clicking on 
   the "Query Table" button in the table view.

2017/09/26 1.6.2
================

Fixes
----- 

 - Improve shards view performance
 
 - Remove horizontal scroll from the console editor.

2017/09/18 1.6.1
================

Fixes
-----

 - Fixed an issue that caused the tooltip to have a wrong position
   in the Shards view. 

2017/09/18 1.6.0
================

Changes
-------

 - Added Shards plugin for the Enterprise Edition. The shard 
   plugin is a visualization that displays information about 
   shards by table, partition and node. 

 - Added query table to Tables view.

 - Implemented share query feature in the Console.

2017/09/18 1.5.3
================

Fixes
-----

 - Show generation expression for generated columns in Tables view.

 - Added the row count number to the query status in the Console view. 

 - Fixed issue that caused the privileges view to not be scrollable.

 - Fixed typo in privileges view.

2017/08/29 1.5.2
================

Fixes
-----

 - Fixed empty ``account_user``-column in twitter tutorial plugin.

2017/08/23 1.5.1
================

Fixes
-----

 - Fixed issue that caused the Monitoring tab to redirect to ``/401`` when
   the user didn't have privileges for ``sys.cluster`` or ``sys.jobs_log``.

2017/08/23 1.5.0
================

Changes
-------

 - Added Privileges plugin for the Enterprise Edition.
